--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,13 @@
     margin: 0;
     box-sizing: border-box;
 }
+/* CSS */
+.no-scrollbar {
+  overflow-y: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;  /* Chrome, Safari, Opera */
+}
